k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes-frontend-deployment
  namespace: frontend 
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: quotes-frontend
  template:
    metadata:
      labels:
        app: quotes-frontend
    spec:
      containers:
        - name: quotes-frontend
          image: k8s-three-tier-starter-app:latest
          imagePullPolicy: Never # image is imported locally, not pulled from a registry
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: quotes-frontend-service
  namespace: frontend 
spec:
  selector:
    app: quotes-frontend
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002 
  type: ClusterIP
